--- a/quote-editor/app/assets/stylesheets/application.sass.scss
+++ b/quote-editor/app/assets/stylesheets/application.sass.scss
@@ -1,1 +1,19 @@
 // Entry point for your Sass build
+
+// Mixins
+@import "mixins/media";
+
+//Configuration
+@import "config/reset";
+@import "config/variables";
+
+//Components
+@import "components/btn";
+@import "components/error_message";
+@import "components/form";
+@import "visually_hidden";
+@import "components/quote";
+
+// Layouts
+@import "layouts/container";
+@import "layouts/header";
