--- a/quote-editor/app/views/quotes/_form.html.erb
+++ b/quote-editor/app/views/quotes/_form.html.erb
@@ -8,6 +8,8 @@
 
   <%= f.input :name, input_html: { autofocus: true } %>
   <%= f.submit class: "btn btn--secondary" %>
+  <%= link_to "Cancel", quotes_path, class: "btn btn--secondary" %>
 <% end %>
+
 
 
