--- a/quote-editor/app/views/quotes/index.html.erb
+++ b/quote-editor/app/views/quotes/index.html.erb
@@ -1,3 +1,6 @@
+<%# Puppies can be anything, this is esentially the name of the channel streaming %>
+<%= turbo_stream_from "puppies" %>
+
 <main class="container">
   <div class="header">
     <h1>Quotes</h1>
