--- a/quote-editor/app/views/layouts/application.html.erb
+++ b/quote-editor/app/views/layouts/application.html.erb
@@ -10,9 +10,10 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
   <body>
+    <%= render "layouts/navbar" %>
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-
     <%= yield %>
   </body>
 </html>
