--- a/quote-editor/app/views/quotes/update.turbo_stream.erb
+++ b/quote-editor/app/views/quotes/update.turbo_stream.erb
@@ -1,3 +1,4 @@
 <%# turbo_stream.update @quote, partial: "quotes/quote", locals: { quote: @quote} %>
 
 <%= turbo_stream.update @quote %>
+<%= render_turbo_stream_flash_messages %>
