Add line_item model, views and controller

--- a/quote-editor/app/assets/stylesheets/application.sass.scss
+++ b/quote-editor/app/assets/stylesheets/application.sass.scss
@@ -19,6 +19,7 @@
 @import "components/flash";
 @import "components/empty_state";
 @import "components/line_items_date";
+@import "components/line_item";
 
 // Layouts
 @import "layouts/container";
