--- a/quote-editor/app/views/quotes/show.html.erb
+++ b/quote-editor/app/views/quotes/show.html.erb
@@ -1,4 +1,4 @@
-<main class="container">
+<main class="container mb-xxxxl">
   <%= link_to sanitize("&larr; Back to quotes"), quotes_path %>
 
   <div class="header">
@@ -18,4 +18,9 @@
   <%= turbo_frame_tag "line_item_dates" do %>
     <%= render @line_item_dates, quote: @quote %>
   <% end %>
+
+  <%= turbo_frame_tag dom_id(@quote, :total) do %>
+    <%= render "quotes/total", quote: @quote %>
+  <% end %>
+
 </main>
